--- a/public/app/head.html
+++ b/public/app/head.html
@@ -20,6 +20,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.1/css/ripples.min.css">
 
 	<!-- Custom Style -->
+	<link rel="stylesheet" href="/stylesheets/animations.css">
 	<link rel="stylesheet" href="/stylesheets/globalStyle.css">
 
 </head>
