--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -166,7 +166,7 @@
 
 				<div class="modal-footer">
 					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-					<button data-dismiss="modal" type="button" class="btn" ng-click='deletePoll()'>Delete</button>
+					<button data-dismiss="modal" type="button" class="btn btn-danger" ng-click='deletePoll()'>Delete</button>
 				</div>
 
 			</div>
