--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -63,7 +63,7 @@
 					<div ng-show='poll' class="alert alert-dismissible alert-success">
 						<strong>Poll has been created</strong>
 						<p>You can access the poll in the next link
-							<br> <a ng-href="/#/polls/{{poll._id}}">{{poll._id}}</a>
+							<br> <a ng-href="/#/polls/{{poll._id}}">{{poll.name}}</a>
 						</p>
 					</div>
 
@@ -120,8 +120,6 @@
 										<td> <a ng-href="/#/polls/{{poll._id}}">{{poll.name}}</a> </td>
 										<td>{{poll.totalVotes}}</td>
 										<td>
-											<!--<button ng-click='deletePoll(poll._id)'>Delete</button>-->
-											<!--<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#modal" ng-click='setDeleteId(poll._id,poll.name)'>Open Modal</button>-->
 											<button type="button" class="" data-toggle="modal" data-target="#modal" ng-click='setDeleteId(poll._id,poll.name)'>Delete</button>
 										</td>
 									</tr>
@@ -161,7 +159,7 @@
 				</div>
 
 				<div class="modal-body">
-					<p>Do you want delete the poll "{{ pollToDelete.name }}" </p>
+					<p>Do you want delete the poll <span class=''>"{{ pollToDelete.name }}"</span> ? </p>
 				</div>
 
 				<div class="modal-footer">
