--- a/public/app/poll/poll.html
+++ b/public/app/poll/poll.html
@@ -1,6 +1,11 @@
 <div class="poll">
 
-	<div ng-show='poll' class="container">
+	<div ng-show='poll.error' class="alert alert-dismissible alert-danger">
+		<strong>{{poll.error}}</strong>
+		<p><a href="/#/home">Go home</a></p>
+	</div>
+
+	<div ng-show='poll' ng-hide='poll.error' class="container">
 
 		<h2>{{poll.name}}</h2>
 		<section ng-hide='pollVoted()' class="vote">
