--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -33,7 +33,7 @@
 
 				<section id="newPoll" ng-show='isSet("newPoll")'>
 
-					<form ng-submit='createPoll()' class="formCreatePoll">
+					<form ng-submit='createPoll()' class="formCreatePoll" novalidate>
 
 						<div class="form-group">
 							<label class="control-label" for="namePoll">Name your poll</label>
