--- a/public/app/login/login.html
+++ b/public/app/login/login.html
@@ -1,23 +1,23 @@
 <div class="login">
 
-	<div ng-show='login.error' class="alert alert-dismissible alert-danger">
-		<strong>{{login.error.message}}</strong>
+	<div ng-show='error' class="alert alert-dismissible alert-danger">
+		<strong>{{error.message}}</strong>
 	</div>
 
 	<div class="container">
 
 		<h2>Log In</h2>
 
-		<form ng-submit='login.login()'>
+		<form ng-submit='login()' novalidate>
 
 			<div class="form-group">
 				<label class="control-label" for="email">Email</label>
-				<input type="email" ng-model="login.user.email" class="form-control" id="email" required>
+				<input type="email" ng-model="user.email" class="form-control" id="email" required>
 			</div>
 
 			<div class="form-group">
 				<label class="control-label" for="password">Password</label>
-				<input type="password" ng-model="login.user.password" class="form-control" id="password" minlength='5' required>
+				<input type="password" ng-model="user.password" class="form-control" id="password" minlength='5' required>
 			</div>
 
 			<button type='submit' class='btn btn-lg pull-right'>Log In</button>
