--- a/public/app/register/register.html
+++ b/public/app/register/register.html
@@ -1,6 +1,6 @@
 <div class="register">
 
-	<div ng-show='register.error' class="alert alert-dismissible alert-danger">
+	<div ng-show='error' class="alert alert-dismissible alert-danger">
 		<strong>This email already exists</strong>
 	</div>
 
@@ -8,21 +8,21 @@
 
 		<h2>Register</h2>
 
-		<form ng-submit='register.register()'>
+		<form ng-submit='register()'>
 
 			<div class="form-group">
 				<label class="control-label" for="name">Name</label>
-				<input type="text" ng-model='register.user.username' class="form-control" id="name" required>
+				<input type="text" ng-model='user.username' class="form-control" id="name" required>
 			</div>
 
 			<div class="form-group">
 				<label class="control-label" for="email">Email</label>
-				<input type="email" ng-model='register.user.email' class="form-control" id="email" required>
+				<input type="email" ng-model='user.email' class="form-control" id="email" required>
 			</div>
 
 			<div class="form-group">
 				<label class="control-label" for="password">Password</label>
-				<input type="password" ng-model='register.user.password' class="form-control" id="password" minlength='5' required>
+				<input type="password" ng-model='user.password' class="form-control" id="password" minlength='5' required>
 			</div>
 
 			<button type='submit' class='btn btn-lg pull-right'>Register</button>
