--- a/public/app/home/home.html
+++ b/public/app/home/home.html
@@ -63,7 +63,7 @@
 					<div ng-show='poll' class="alert alert-dismissible alert-success">
 						<strong>Poll has been created</strong>
 						<p>You can access the poll in the next link
-							<br> <a ng-href="/#/polls/{{poll._id}}">{{poll.name}}</a>
+							<br> <a ng-href="/#/polls/{{::poll._id}}">{{::poll.name}}</a>
 						</p>
 					</div>
 
@@ -117,8 +117,8 @@
 								</thead>
 								<tbody>
 									<tr class='animate-repeat' ng-repeat='poll in myPolls | orderBy: order | filter: search'>
-										<td> <a ng-href="/#/polls/{{poll._id}}">{{poll.name}}</a> </td>
-										<td>{{poll.totalVotes}}</td>
+										<td> <a ng-href="/#/polls/{{::poll._id}}">{{::poll.name}}</a> </td>
+										<td>{{::poll.totalVotes}}</td>
 										<td>
 											<button type="button" class="" data-toggle="modal" data-target="#modal" ng-click='setDeleteId(poll._id,poll.name)'>Delete</button>
 										</td>
