--- a/public/app/poll/poll.html
+++ b/public/app/poll/poll.html
@@ -1,13 +1,8 @@
 <div class="poll">
 
-	<div ng-show='poll.error' class="alert alert-dismissible alert-danger">
-		<strong>{{poll.error}}</strong>
-		<p><a href="/#/home">Go home</a></p>
-	</div>
-
 	<div ng-show='poll' ng-hide='poll.error' class="container">
 
-		<h2>{{poll.name}}</h2>
+		<h2>{{::poll.name}}</h2>
 		<section ng-hide='pollVoted()' class="vote">
 
 			<form ng-submit='votePoll()'>
@@ -18,7 +13,7 @@
 
 						<label for='option{{option._id}}'>
 
-							<input type="radio" ng-model='$parent.optionVoteId' ng-value="option._id" id="option{{option._id}}" name="optionsRadios" required> {{option.name}}
+							<input type="radio" ng-model='$parent.optionVoteId' ng-value="option._id" id="option{{::option._id}}" name="optionsRadios" required> {{::option.name}}
 
 						</label>
 
@@ -37,7 +32,7 @@
 			<div ng-repeat='option in poll.options | orderBy: "-votes" '>
 
 				<p class='optionPercent'>
-					<span>{{option.name}}  </span>
+					<span>{{::option.name}}  </span>
 				</p>
 				<p>
 					<span>Votes: {{option.votes}}</span>
@@ -58,9 +53,19 @@
 
 	</div>
 
+	<div ng-show='poll.error' class="alert alert-dismissible alert-danger">
+		<strong>{{poll.error}}</strong>
+		<p><a href="/#/home">Go home</a></p>
+	</div>
+
+	<div ng-show='error' class="alert alert-dismissible alert-danger">
+		<strong>{{poll.error}}</strong>
+		<p><a href="/#/home">{{error}}</a></p>
+	</div>
+
 	<div ng-show='message' class="alert alert-dismissible alert-success">
 		<strong>{{message}}</strong>
-		<p> <a href="/#/home"> Go home -></a> </p>
+		<p> <a href="/#/home"> Go home </a> </p>
 	</div>
 
 	<!-- Modal -->
@@ -74,7 +79,7 @@
 				</div>
 
 				<div class="modal-body">
-					<p>Do you want delete the poll <span class=''>"{{ poll.name }}"</span> ? </p>
+					<p>Do you want delete the poll <span class=''>"{{::poll.name}}"</span> ? </p>
 				</div>
 
 				<div class="modal-footer">
