--- a/public/app/login/login.html
+++ b/public/app/login/login.html
@@ -21,6 +21,7 @@
 			</div>
 
 			<button type='submit' class='btn btn-lg pull-right'>Log In</button>
+			<a href="/user/login/twitter" class='btn btn-lg pull-right twitter'>Login with twitter</a>
 
 		</form>
 
