--- a/public/app/head.html
+++ b/public/app/head.html
@@ -19,6 +19,9 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.1/css/bootstrap-material-design.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.1/css/ripples.min.css">
 
+	<!--Font awesome-->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+
 	<!-- Custom Style -->
 	<link rel="stylesheet" href="/stylesheets/animations.css">
 	<link rel="stylesheet" href="/stylesheets/globalStyle.css">
